src/css/popup.scss
@import './reset';
@import './checkbox';
@import './button';

$font-colors-light: (
  'gray': rgb(155, 154, 151),
  'brown': rgb(100, 71, 58),
  'orange': rgb(217, 115, 13),
  'yellow': rgb(223, 171, 1),
  'green': rgb(15, 123, 108),
  'blue': rgb(11, 110, 153),
  'purple': rgb(105, 64, 165),
  'pink': rgb(173, 26, 114),
  'red': rgb(224, 62, 62)
);
$background-colors-light: (
  'gray': rgb(235, 236, 237),
  'brown': rgb(233, 229, 227),
  'orange': rgb(250, 235, 221),
  'yellow': rgb(251, 243, 219),
  'green': rgb(221, 237, 234),
  'blue': rgb(221, 235, 241),
  'purple': rgb(234, 228, 242),
  'pink': rgb(244, 223, 235),
  'red': rgb(251, 228, 228)
);
$font-colors-dark: (
  'gray': rgba(151, 154, 155, 0.95),
  'brown': rgb(147, 114, 100),
  'orange': rgb(255, 163, 68),
  'yellow': rgb(255, 220, 73),
  'green': rgb(77, 171, 154),
  'blue': rgb(82, 156, 202),
  'purple': rgb(154, 109, 215),
  'pink': rgb(226, 85, 161),
  'red': rgb(255, 115, 105)
);
$background-colors-dark: (
  'gray': rgb(69, 75, 78),
  'brown': rgb(67, 64, 64),
  'orange': rgb(89, 74, 58),
  'yellow': rgb(89, 86, 59),
  'green': rgb(53, 76, 75),
  'blue': rgb(54, 73, 84),
  'purple': rgb(68, 63, 87),
  'pink': rgb(83, 59, 76),
  'red': rgb(89, 65, 65)
);

@mixin colored-text-color($type, $color, $value) {
  @if $type == 'font' {
    .font-#{$color} {
      color: $value !important;

      span {
        color: $value;
      }
    }
  } @else {
    .background-#{$color} {
      background-color: $value;
      color: rgb(55, 53, 47);
    }
  }
}

*::selection {
  background-color: rgba(45, 170, 219, 0.3);
}

body {
  width: 300px;
  font-size: 14px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
    'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
  color: rgb(55, 53, 47);
  position: relative;
  line-height: 1.25;
  padding-bottom: 43px;

  &.dark {
    background-color: rgb(47, 52, 55);
    color: rgba(#fff, 0.9);
  }

  &.exported {
    width: 338px;
    padding-bottom: 104px;

    #blocks {
      // 600 - 14 * 2 - 104 - 43
      max-height: 425px;

      label {
        display: flex;
      }
    }

    .menu ul {
      display: none;
    }

    .exporter-container {
      display: block;
    }
  }
}

nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #fff;
  z-index: 99;
  box-shadow: 0 1px 0 rgba(55, 53, 47, 0.09);
  transform: translateY(-100%);
  opacity: 0;
  transition: all 200ms ease-out;

  ul {
    display: flex;
  }

  .tab {
    width: 50%;
    text-align: center;
    font-size: 16px;
    line-height: 42px;
    transition: background-color 120ms ease-in;
    cursor: pointer;
    user-select: none;
  
    &:hover,
    &.active {
      background-color: rgba(55, 53, 47, 0.08);
    }
  
    &:active {
      background-color: rgba(55, 53, 47, 0.16);
    }
  }

  &.shown {
    opacity: 1;
    transform: translateY(0);
  }
}

#blocks {
  padding: 14px 8px;
  padding-top: 57px;
  // 600 - 14 * 2 - 43
  max-height: 529px;

  overflow-y: auto;
  box-sizing: border-box;
  line-height: 1.5;
  word-break: break-word;

  .wrapper {
    display: flex;

    + .wrapper {
      margin-top: 10px;
    }
  }

  label {
    align-items: center;
    padding-right: 16px;
    padding-left: 8px;
    display: none;
    flex: 0 0 auto;
  }
}

#colored-texts-container,
#comments-container {
  display: none;

  &.shown {
    display: block;
  }
}

.block {
  padding: 6px 8px;
  transition: all 60ms ease-in;
  border-radius: 3px;
  cursor: pointer;
  position: relative;
  color: rgba(55, 53, 47, 0.16);
  flex: 1 1 auto;

  span {
    color: rgb(55, 53, 47);
  }

  &:hover,
  &.focused {
    box-shadow: 0 0 16px 1px rgba(55, 53, 47, 0.16);
  }

  &:hover {
    color: rgb(55, 53, 47);
  }

  &:active {
    box-shadow: 0 0 16px 1px rgba(55, 53, 47, 0.32);
  }
}

.light {
  @each $color, $value in $font-colors-light {
    @include colored-text-color('font', $color, $value);
  }

  @each $color, $value in $background-colors-light {
    @include colored-text-color('background', $color, $value);
  }
}

.dark {
  .block {
    color: rgb(71, 76, 80);

    span {
      color: rgba(#fff, 0.9);
    }

    &:hover,
    &.focused {
      box-shadow: 0 0 16px 1px rgb(71, 76, 80);
    }

    &:hover {
      color: rgba(#fff, 0.9);
    }

    &:active {
      box-shadow: 0 0 16px 1px rgb(63, 68, 71);
    }
  }

  nav,
  .menu {
    background-color: rgb(47, 52, 55);

    .tab {
      &.active,
      &:hover {
        background-color: rgb(71, 76, 80);
      }

      &:active {
        background-color: rgb(63, 68, 71);
      }
    }
  }

  nav {
    box-shadow: 0 1px 0 rgba(#fff, 0.07);
  }

  .menu {
    ul {
      box-shadow: 0 -1px 0 rgba(#fff, 0.07);
    }
  }

  .exporter-icon {
    fill: rgba(#fff, 0.9);
  }

  #status {
    color: rgba(#fff, 0.6);
  }

  @each $color, $value in $font-colors-dark {
    @include colored-text-color('font', $color, $value);
  }

  @each $color, $value in $background-colors-dark {
    @include colored-text-color('background', $color, $value);
  }
}

.menu {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 49;
  background-color: #fff;

  ul {
    box-shadow: 0 -1px 0 rgba(55, 53, 47, 0.09);
  }

  .tab {
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 20ms ease-in;
    cursor: pointer;
    user-select: none;
    line-height: 42px;

    &:hover {
      background-color: rgba(55, 53, 47, 0.08);
    }
  
    &:active {
      background-color: rgba(55, 53, 47, 0.16);
    }

    svg {
      margin-right: 8px;
    }
  }
}

.exporter-container {
  display: none;
}

.exporter-options {
  padding: 14px 16px;
  box-shadow: 0 -1px 0 rgba(55, 53, 47, 0.09);
  display: flex;
  align-items: center;
  justify-content: space-between;

  label {
    width: fit-content;
    display: flex;
    align-items: center;
    flex: 0 0 auto;

    span {
      line-height: 1;
      margin-left: 8px;
    }
  }
}

#status {
  color: rgba(55, 53, 47, 0.6);
  font-size: 14px;
  margin-left: 10px;
  line-height: 1;
}

.exporter-btns {
  padding: 14px 16px;
  box-shadow: 0 -1px 0 rgba(55, 53, 47, 0.09);
  display: flex;
  margin-top: 1px;

  .secondary {
    margin-right: auto;
  }

  button:last-child {
    margin-left: 12px;
  }
}

#exporter-btns-wrapper {
  display: none;

  &.shown {
    display: block;
  }
}

.exporter-icon {
  fill: rgb(55, 53, 47);
  width: 16px;
  height: 16px;
}

